fixing follow schema and follow service
