# src/routes/follow.routes.ts
@@ -4,5 +4,7 @@ import { authCheck } from '../middleware/auth-check.middleware';
 const router = express.Router();
 
 router.post('/', authCheck, followController.createFollow);
-router.delete('/:userId', authCheck, followController.deleteFollow);
+router.delete('/:followedId', authCheck, followController.deleteFollow);
+router.get('/followers/:userId', authCheck, followController.getFollowers);
+router.get('/following/:userId', authCheck, followController.getFollowing);
 export default router;
