# src/utils/schemas/follow.schema.ts
@@ -1,11 +1,10 @@
 import Joi from 'joi';
-import { CreateLikeDTO, DeleteLikeDTO } from '../../dtos/like.dto';
-import { CreateFollowedDTO, DeleteFollowedDTO } from '../../dtos/follow.dto';
+import { CreateFollowDTO, DeleteFollowDTO } from '../../dtos/follow.dto';
 
-export const createFollowSchema = Joi.object<CreateFollowedDTO>({
-  followedId: Joi.string().uuid(),
+export const createFollowSchema = Joi.object<CreateFollowDTO>({
+  followedId: Joi.string().uuid().required(),
 });
 
-export const deleteFollowSchema = Joi.object<DeleteFollowedDTO>({
-  followedId: Joi.string().uuid(),
+export const deleteFollowSchema = Joi.object<DeleteFollowDTO>({
+  followedId: Joi.string().uuid().required(),
 });
