# src/utils/schemas/update.profile.schema.ts
@@ -1,0 +1,9 @@
+import Joi from 'joi';
+import { UpdateProfileDTO, UpdateUserDTO } from '../../dtos/user.dto';
+
+export const updateProfileSchema = Joi.object<UpdateProfileDTO>({
+  fullName: Joi.string().max(100).required(),
+  username: Joi.string().min(4).max(12).required(),
+  bio: Joi.string().max(100),
+  avatarUrl: Joi.string(),
+});
